# knowledge-base-lib

./: .coverage  .gitignore  CLAUDE.md  MILESTONES.yaml  README.md  pyproject.toml
features/: graph_connectivity.feature  graph_operations.feature  graph_storage.feature  greenlight_kb_mastery_sync.feature  knowledge_base_integration.feature  vector_search.feature
features/graph/: analogical_bridges.feature  prerequisite_graph.feature
features/search/: semantic_vector_search.feature
knowledge_base/: __init__.py
knowledge_base/models/: __init__.py  base.py  platinum.py
knowledge_base/services/: __init__.py  analogy_service.py  knowledge_service.py  prerequisite_service.py  search_service.py
knowledge_base/storage/: __init__.py  base.py  graph.py  vector.py
src/core/: __init__.py  atom_store.py  concept_graph.py  evidence_connector.py  feedback_store.py  graph_analytics.py  graph_connector.py  models.py  platinum.py  prerequisite.py  repository.py  vector_store.py
tests/: __init__.py  conftest.py  test_graph_operations.py  test_graph_operations_unit.py  test_knowledge_base.py
tests/step_defs/: __init__.py  graph_operations_steps.py  graph_storage_steps.py  greenlight_kb_mastery_sync_steps.py  kb_integration_steps.py  vector_search_steps.py
